# buxn

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  adb-run  bootstrap  build  build-cmake  compile  compile_flags.txt  logo.kra  logo.qoi  msvc.bat  test  watch
.github/workflows/: build.yml
cmake/: linux.cmake
doc/: README.md  asm-frontend.md  asm.md  bindgen-example.tal  bindgen.md  chess.md  cli.md  dbg.md  devices.md  gui.md  repl.md  rom2exe.md  romviz.md  vm.md
include/buxn/: metadata.h
include/buxn/asm/: annotation.h  asm.h  chess.h
include/buxn/dbg/: core.h  protocol.h  symbol.h  symtab.h  wire.h
include/buxn/dbg/transports/: fd.h  fifo.h  file.h
include/buxn/devices/: controller.h  datetime.h
include/buxn/vm/: vm.h
src/: CMakeLists.txt  asm.c  asm.h  bembd.h  bflag.h  bindgen.c  cli.c  ctags.c  dbg-wrapper.c  dbg.c  dbg.h  gui.c  libs.c  metadata.c  metadata.h  physfs.c  platform.h  platform_android.c  platform_linux.c  repl.c  repl.rc  repl.tal  resources.h  resources.rc  rom2exe.c  romviz.c  sokol.c  vm.c  vm.h  vm_exec.h  vm_opcodes.h
src/android/: AndroidManifest.xml  libbuxn.map.txt  platform.c
src/android/apk/assets/: .gitignore  README.md
src/android/res/values/: strings.xml
src/asm/: annotation.c  asm.c  asm.h  chess.c  gen-table.c  hamt.h  opcode_hash.h  sym-view.c
src/dbg/: btmp_buf.h  core.c  core.h  protocol.c  protocol.h  symbol.h  symtab.c  wire.c  wire.h
src/dbg/transports/: fd.c  fifo.c  file.c  from_str.c  from_str.h  stream.c  stream.h
src/devices/: audio.c  audio.h  console.c  console.h  controller.c  controller.h  datetime.c  file.c  file.h  mouse.c  mouse.h  screen.c  screen.h  sokol_console.c  sokol_console.h  stdio_console.c  stdio_console.h  system.c  system.h
src/linux/: platform.c
src/vm/: exec.h  vm.c  vm.h
src/win32/: platform.c
tests/: CMakeLists.txt  acid.tal  asm-extensions.c  asm.c  chess.c  common.c  common.h  dbg.c  door.tal  main.c  object.tal  opctest.tal  prog_brkp.tal  resources.h  resources.rc  vector.tal  vm.c
